--- a/MFCC/基音周期估计.md
+++ b/MFCC/基音周期估计.md
@@ -2,21 +2,21 @@
 
 ### 基音与基音周期估计
 
-人在发音时，根据声带是否震动可以将语音信号分为清音跟浊音两种。
+人在发音时，根据声带是否震动可以将语音信号分为**清音**跟**浊音**两种。
 
-浊音又称有声语言，携带者语言中大部分的能量，浊音在时域上呈现出明显的周期性
+浊音又称有声语言，携带者语言中大部分的能量，**浊音在时域上呈现出明显的周期性**。
 
-清音类似于白噪声，没有明显的周期性。
+**清音类似于白噪声**，没有明显的周期性。
 
 发浊音时，气流通过声门使声带产生张弛震荡式振动，产生准周期的激励脉冲串。这种声带振动的频率称为**基音频率**，相应的周期就成为**基音周期**。
 
 一般来说，男性说话者的基音频率较低，而女性说话者和小孩的基音频率相对较高。
 
-基音周期的估计称为**基音检测**，基音检测的最终目的是为了找出和声带振动频率完全一致或尽可能相吻合的轨迹曲线。
+基音周期的估计称为**基音检测**，基音检测的最终**目的是为了找出和声带振动频率完全一致或尽可能相吻合的轨迹曲线。**
 
 基因周期作为语音信号处理中描述激励源的重要参数之一，在语音合成、语音压缩编码、语音识别和说话人确认等领域都有着广泛而重要的问题，尤其对汉语更是如此。
 
-汉语是一种有调语言，而基因周期的变化称为声调，声调对于汉语语音的理解极为重要。因为在汉语的相互交谈中，不但要凭借不同的元音、辅音来辨别这些字词的意义，还需要从不同的声调来区别它，也就是说声调具有辨义作用；另外，汉语中存在着多音字现象，同一个字的不同的语气或不同的词义下具有不同的声调。因此准确可靠地进行基音检测对汉语语音信号的处理显得尤为重要。
+汉语是一种有调语言，而**基因周期的变化称为声调**，声调对于汉语语音的理解极为重要。因为在汉语的相互交谈中，不但要凭借不同的元音、辅音来辨别这些字词的意义，还需要从不同的声调来区别它，也就是说声调具有辨义作用；另外，汉语中存在着多音字现象，同一个字的不同的语气或不同的词义下具有不同的声调。因此准确可靠地进行基音检测对汉语语音信号的处理显得尤为重要。
 
 ### 基音周期估计的现有方法
 
@@ -50,7 +50,7 @@
 
     <img src="https://latex.codecogs.com/gif.latex?R_{n}(\tau&space;)=\sum_{m=0&space;}^{n-1-\tau}&space;\left&space;[&space;s(n&plus;m)w(m)&space;\right&space;]&space;\left[&space;s(n&plus;m&plus;\tau)w(m&plus;\tau)&space;\right&space;]" title="R_{n}(\tau )=\sum_{m=0 }^{n-1-\tau} \left [ s(n+m)w(m) \right ] \left[ s(n+m+\tau)w(m+\tau) \right ]" />
 
-    一般要求一帧至少包含2个以上的周期。一般，基频最低50Hz，故周期最长为20ms。而且相邻帧之间要有足够的重叠。具体应用时，窗口长度根据采样率确定帧长。
+    一般要求一帧至少包含 2 个以上的周期。一般，基频最低 50Hz，故周期最长为 20ms。而且相邻帧之间要有足够的重叠。具体应用时，窗口长度根据采样率确定帧长。
 
 ### 基于自相关的基音周期检测算法实现
 
