--- a/MFCC/音频文件介绍.md
+++ b/MFCC/音频文件介绍.md
@@ -16,11 +16,15 @@ mp2, mp3, wma 都是压缩格式。
 
 ### 读取音频
 
-matlab 里读取音频 wav 文件，可以用 wavread 函数。`help(wavread)`
+matlab 里读取音频 wav 文件，可以用 readwav 函数。`help(readwav)`
+> 需要安装[voicebox 工具箱](https://github.com/luanxxys/env/blob/master/voicebox.md)
 
-    y = wavread('1.wav');
-    [y fs] = wavread('1.wav');
-    [y fs nbits] = wavread('1.wav');
+
+    ```matlab
+    y = readwav('1.wav');
+    [y fs] = readwav('1.wav');
+    [y fs nbits] = readwav('1.wav');
+    ```
 
 这三种方式，y 是读取的音频数据，fs 是采样率，nbits 是采样位数。
 
@@ -36,7 +40,7 @@ y 的值在 -1~1 之间，相当与已经归一化了。如果是双通道，取
 
 matlab 操作
 
-    [y fs nbits opts] = wavread('1.wav');
+    [y fs nbits opts] = readwav('1.wav');
     >> opts.fmt
 
         ans =
