--- a/ASR_GoogleAPI/python_asr.ipynb
+++ b/ASR_GoogleAPI/python_asr.ipynb
@@ -4,23 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python 实现 ASR demo"
+    "# 使用 Google API 实现 ASR demo"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- ### 安装 SpeechRecognation\n",
+    "### 首先安装 SpeechRecognation\n",
     "\n",
     "        $ pip install SpeechRecognition"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.8.1'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 处理现有的音频文件，只需直接调用 SpeechRecognition\n",
     "import speech_recognition as sr\n",
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "speech_recognition.AudioData"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 添加语音文件\n",
     "harvard = sr.AudioFile('harvard.wav')\n",
