--- a/基音周期估计.md
+++ b/基音周期估计.md
@@ -66,4 +66,4 @@
 
 1. 图中计算该语音的所有帧对应的基音周期的点，由图可以看出存在不少的野点。因为，需要对此进行进一步的处理，即去除野点。这里通过中值滤波来除去野点。
 
-[source from zouxy09](http://blog.csdn.net/zouxy09/article/details/9141875)
+- [source from zouxy09](http://blog.csdn.net/zouxy09/article/details/9141875)
