--- a/音频文件介绍.md
+++ b/音频文件介绍.md
@@ -63,4 +63,4 @@ y 的值在 -1~1 之间, 相当与已经归一化了. 如果是双通道, 取第
 1. nBlockAlign is equal to the rato between nAveBytesPerSec and nSamplePerSec.
 1. nBitsPerSample is the bit resolution.
 
-[source： http://blog.csdn.net/wbgxx333/article/details/11395371](http://blog.csdn.net/wbgxx333/article/details/11395371)
+- [source： http://blog.csdn.net/wbgxx333/article/details/11395371](http://blog.csdn.net/wbgxx333/article/details/11395371)
